[project]
name = "VIPMUSIC"
version = "0.1.0"
description = "Telegram Music Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyromod",
    "openai",
    "aiofiles",
    "aiohttp",
    "beautifulsoup4",
    "dnspython",
    "ffmpeg-python",
    "gitpython",
    "hachoir",
    "heroku3",
    "httpx[http2]",
    "lyricsgenius",
    "motor",
    "wget",
    "pillow",
    "pymongo",
    "psutil",
    "pytube",
    "pykeyboard",
    "unidecode",
    "py-tgcalls==1.2.9",
    "ntgcalls==1.1.2",
    "python-dotenv",
    "pyyaml",
    "requests",
    "speedtest-cli",
    "spotipy",
    "tgcrypto",
    "urllib3",
    "uvloop; platform_system != 'Windows'",
    "flask",
    "gunicorn",
    "yt-dlp",
    "youtube-search-python",
    "youtube-search",
    "pyrogram",
    "https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
